--- a/devel/py-poetry-core/Makefile
+++ b/devel/py-poetry-core/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.12 2024/10/14 05:21:40 adam Exp $
+# $NetBSD: Makefile,v 1.13 2025/01/07 12:36:50 wiz Exp $
 
-DISTNAME=	poetry_core-1.9.1
+DISTNAME=	poetry_core-2.0.0
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/_/-/}
 CATEGORIES=	devel python
 MASTER_SITES=	${MASTER_SITE_PYPI:=p/poetry-core/}
@@ -20,6 +20,9 @@ TEST_DEPENDS+=	git-base-[0-9]*:../../devel/git-base
 
 # for tests only
 USE_LANGUAGES=	c
+
+# as of 2.0.0
+# 4 failed, 2271 passed, 5 skipped, 9 deselected
 
 .include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
