--- a/sysutils/snmp_exporter/Makefile
+++ b/sysutils/snmp_exporter/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.10 2024/09/06 18:48:58 bsiegert Exp $
+# $NetBSD: Makefile,v 1.11 2025/01/07 12:55:36 wiz Exp $
 
-DISTNAME=	snmp_exporter-0.26.0
-PKGREVISION=	5
+DISTNAME=	snmp_exporter-0.27.0
 CATEGORIES=	sysutils
 MASTER_SITES=	${MASTER_SITE_GITHUB:=prometheus/}
 GITHUB_TAG=	v${PKGVERSION_NOREV}
