--- a/sysutils/binwalk/Makefile
+++ b/sysutils/binwalk/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.9 2023/08/14 05:25:13 wiz Exp $
+# $NetBSD: Makefile,v 1.10 2025/01/07 13:35:55 tnn Exp $
 
-DISTNAME=	binwalk-2.3.4
-PKGREVISION=	1
+DISTNAME=	binwalk-3.1.0
 CATEGORIES=	sysutils
 MASTER_SITES=	${MASTER_SITE_GITHUB:=ReFirmLabs/}
 GITHUB_TAG=	v${PKGVERSION_NOREV}
@@ -11,10 +10,10 @@ HOMEPAGE=	https://github.com/ReFirmLabs/binwalk/
 COMMENT=	Firmware analysis tool
 LICENSE=	mit
 
-PYTHON_VERSIONS_INCOMPATIBLE=	27
-USE_LANGUAGES=	# none
-# bug in 2.3.4 release
-EGG_NAME=	binwalk-2.3.3
+USE_TOOLS+=	pkg-config
 
-.include "../../lang/python/egg.mk"
+.include "cargo-depends.mk"
+
+.include "../../fonts/fontconfig/buildlink3.mk"
+.include "../../lang/rust/cargo.mk"
 .include "../../mk/bsd.pkg.mk"
