--- a/x11/libdisplay-info/Makefile
+++ b/x11/libdisplay-info/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.3 2025/01/06 18:15:53 gutteridge Exp $
+# $NetBSD: Makefile,v 1.4 2025/01/07 15:55:49 jperkin Exp $
 
 DISTNAME=	libdisplay-info-0.2.0
 CATEGORIES=	x11
@@ -12,7 +12,8 @@ LICENSE=	mit
 
 USE_TOOLS+=	pkg-config
 
-BUILDLINK_TRANSFORM.SunOS+=	rm:-Wl,--version-script=${WRKSRC}/libdisplay-info.map
+BUILDLINK_TRANSFORM.SunOS+=	rm:-Wl,--version-script
+BUILDLINK_TRANSFORM.SunOS+=	rm:-Wl,${WRKSRC}/libdisplay-info.map
 
 .include "../../devel/meson/build.mk"
 .include "../../sysutils/hwdata/buildlink3.mk"
