--- a/x11/xfce4-terminal/Makefile
+++ b/x11/xfce4-terminal/Makefile
@@ -1,15 +1,15 @@
-# $NetBSD: Makefile,v 1.86 2024/12/27 08:21:07 wiz Exp $
+# $NetBSD: Makefile,v 1.87 2025/01/07 19:30:38 bsiegert Exp $
 
-PKGREVISION= 5
 .include "../../meta-pkgs/xfce4/Makefile.common"
 
-DISTNAME=	xfce4-terminal-1.1.3
+DISTNAME=	xfce4-terminal-1.1.4
 CATEGORIES=	x11
 MASTER_SITES=	https://archive.xfce.org/src/apps/xfce4-terminal/1.1/
 
 HOMEPAGE=	https://docs.xfce.org/apps/terminal/start
 COMMENT=	Xfce terminal emulator
 
+.include "../../devel/gettext-tools/msgfmt-desktop.mk"
 .include "../../devel/pcre2/buildlink3.mk"
 .include "../../graphics/hicolor-icon-theme/buildlink3.mk"
 .include "../../sysutils/dbus-glib/buildlink3.mk"
