--- a/lang/python311/Makefile
+++ b/lang/python311/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.36 2024/12/06 06:19:12 riastradh Exp $
+# $NetBSD: Makefile,v 1.37 2025/01/07 19:34:41 riastradh Exp $
 
 PKGREVISION=	1
 .include "dist.mk"
@@ -60,7 +60,8 @@ FAKE_NCURSES=		yes
 
 .if ${USE_CROSS_COMPILE:U:tl} == yes
 TOOL_DEPENDS+=		${PKGNAME}:../../${PKGPATH}
-CONFIGURE_ARGS+=	--with-build-python=${TOOLBASE:Q}/bin/python3.11
+CONFIGURE_ARGS+=	\
+	--with-build-python=${TOOLBASE:Q}/bin/python${PY_VER_SUFFIX}
 CONFIGURE_ARGS+=	MACHDEP=${PY_PLATNAME}
 CONFIGURE_ARGS+=	\
 	_PYTHON_HOST_PLATFORM=${LOWER_OPSYS}-${MACHINE_GNU_ARCH}
