--- a/lang/python313/Makefile
+++ b/lang/python313/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.13 2025/01/05 11:18:28 wiz Exp $
+# $NetBSD: Makefile,v 1.14 2025/01/07 19:34:41 riastradh Exp $
 
 PKGREVISION=	3
 .include "dist.mk"
@@ -62,7 +62,8 @@ FAKE_NCURSES=		yes
 
 .if ${USE_CROSS_COMPILE:U:tl} == yes
 TOOL_DEPENDS+=		${PKGNAME}:../../${PKGPATH}
-CONFIGURE_ARGS+=	--with-build-python=${TOOLBASE:Q}/bin/python3.13
+CONFIGURE_ARGS+=	\
+	--with-build-python=${TOOLBASE:Q}/bin/python${PY_VER_SUFFIX}
 CONFIGURE_ARGS+=	MACHDEP=${PY_PLATNAME}
 CONFIGURE_ARGS+=	\
 	_PYTHON_HOST_PLATFORM=${LOWER_OPSYS}-${MACHINE_GNU_ARCH}
