--- a/textproc/py-markups/Makefile
+++ b/textproc/py-markups/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.17 2024/11/11 07:29:05 wiz Exp $
+# $NetBSD: Makefile,v 1.18 2025/01/07 19:47:21 adam Exp $
 
-DISTNAME=	Markups-4.0.0
-PKGNAME=	${PYPKGPREFIX}-${DISTNAME:tl}
-PKGREVISION=	1
+DISTNAME=	markups-4.1.0
+PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	textproc python
 MASTER_SITES=	${MASTER_SITE_PYPI:=M/Markups/}
 
@@ -10,6 +9,8 @@ MAINTAINER=	gutteridge@NetBSD.org
 HOMEPAGE=	https://github.com/retext-project/pymarkups
 COMMENT=	Python text markup language wrapper module
 LICENSE=	modified-bsd
+
+WHEEL_NAME=	${DISTNAME:S/m/M/}
 
 TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools>=61.2:../../devel/py-setuptools
 DEPENDS+=	${PYPKGPREFIX}-markdown-math-[0-9]*:../../textproc/py-markdown-math
@@ -24,6 +25,8 @@ DEPENDS+=	${PYPKGPREFIX}-textile-[0-9]*:../../textproc/py-textile
 # YAML.
 
 USE_LANGUAGES=	# none
+
+PYTHON_VERSIONS_INCOMPATIBLE=	39
 
 .include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
