--- a/sysutils/fastfetch/Makefile
+++ b/sysutils/fastfetch/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.1 2025/01/06 19:34:59 vins Exp $
+# $NetBSD: Makefile,v 1.2 2025/01/07 20:24:32 vins Exp $
 
 DISTNAME=	fastfetch-2.33.0
+PKGREVISION=	1
 CATEGORIES=	sysutils
 MASTER_SITES=	${MASTER_SITE_GITHUB:=fastfetch-cli/}
 GITHUB_TAG=	${PKGVERSION_NOREV}
@@ -14,9 +15,14 @@ USE_TOOLS+=	pkg-config
 
 USE_LANGUAGES=	c c++
 
+DEPENDS+=	hwdata-[0-9]*:../../misc/hwdata
+
 CMAKE_CONFIGURE_ARGS+=	-DCMAKE_BUILD_TYPE=Release \
+			-DCMAKE_INSTALL_PREFIX='${PREFIX}' \
+			-DTARGET_DIR_USR='${PREFIX}' \
 			-DTARGET_DIR_ETC='${PKG_SYSCONFDIR}' \
 			-DCMAKE_INSTALL_PREFIX='${PREFIX}' \
+			-DCUSTOM_PCI_IDS_PATH=${PREFIX}/share/hwdata \
 			-DBUILD_FLASHFETCH=OFF \
 			-DBUILD_TESTS=ON
 
@@ -24,6 +30,5 @@ CMAKE_CONFIGURE_ARGS+=	-DCMAKE_BUILD_TYPE=Release \
 
 .include "../../sysutils/libpciaccess/buildlink3.mk"
 .include "../../devel/cmake/build.mk"
-.include "../../mk/pthread.buildlink3.mk"
 .include "../../mk/dlopen.buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
