--- a/print/p5-Text-Transliterator/Makefile
+++ b/print/p5-Text-Transliterator/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.3 2024/11/16 12:06:24 wiz Exp $
+# $NetBSD: Makefile,v 1.4 2025/01/08 07:02:57 wen Exp $
 
-DISTNAME=	Text-Transliterator-1.03
+DISTNAME=	Text-Transliterator-1.04
 PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	2
 CATEGORIES=	print
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=Text/}
 
