--- a/devel/p5-Modern-Perl/Makefile
+++ b/devel/p5-Modern-Perl/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.35 2024/11/16 12:04:34 wiz Exp $
+# $NetBSD: Makefile,v 1.36 2025/01/08 07:34:01 wen Exp $
 
-DISTNAME=	Modern-Perl-1.20240115
+DISTNAME=	Modern-Perl-1.20241001
 PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	1
 CATEGORIES=	devel perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=../../authors/id/C/CH/CHROMATIC/}
 
