--- a/devel/p5-Perl-Critic/Makefile
+++ b/devel/p5-Perl-Critic/Makefile
@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.52 2024/11/16 12:04:55 wiz Exp $
+# $NetBSD: Makefile,v 1.53 2025/01/08 07:51:32 wen Exp $
 #
 
-DISTNAME=	Perl-Critic-1.152
+DISTNAME=	Perl-Critic-1.156
 PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	1
 CATEGORIES=	devel perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=Perl/}
 
