--- a/security/py-gnupg/Makefile
+++ b/security/py-gnupg/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.39 2024/11/11 07:28:54 wiz Exp $
+# $NetBSD: Makefile,v 1.40 2025/01/08 10:02:35 adam Exp $
 
-DISTNAME=	python-gnupg-0.5.3
+DISTNAME=	python-gnupg-0.5.4
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/^python-//}
 CATEGORIES=	security python
 MASTER_SITES=	${MASTER_SITE_PYPI:=p/python-gnupg/}
