--- a/textproc/py-itemadapter/Makefile
+++ b/textproc/py-itemadapter/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.7 2024/11/11 07:29:03 wiz Exp $
+# $NetBSD: Makefile,v 1.8 2025/01/08 10:05:47 adam Exp $
 
-DISTNAME=	itemadapter-0.9.0
+DISTNAME=	itemadapter-0.10.0
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	textproc python
 MASTER_SITES=	${MASTER_SITE_PYPI:=i/itemadapter/}
@@ -13,8 +13,6 @@ LICENSE=	modified-bsd
 TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools-[0-9]*:../../devel/py-setuptools
 
 USE_LANGUAGES=	# none
-
-PYTHON_VERSIONS_INCOMPATIBLE=	27
 
 .include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
