--- a/mail/mutt/Makefile
+++ b/mail/mutt/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.283 2024/11/14 22:20:38 wiz Exp $
+# $NetBSD: Makefile,v 1.284 2025/01/08 11:30:42 jperkin Exp $
 
 DISTNAME=		mutt-2.2.13
 PKGREVISION=		6
@@ -72,10 +72,11 @@ SUBST_STAGE.paths=	pre-configure
 SPECIAL_PERMS+=		bin/mutt_dotlock ${REAL_ROOT_USER} mail 2551
 INSTALL_MAKE_FLAGS=	${MAKE_FLAGS} sysconfdir=${EGDIR}
 
+CHECK_WRKREF_SKIP+=	bin/mutt	# Embeds lots of build information.
+
 .include "../../devel/zlib/buildlink3.mk"
 .include "../../converters/libiconv/buildlink3.mk"
 .include "../../devel/gettext-lib/buildlink3.mk"
 .include "../../textproc/libxslt/xsltproc-nonet.mk"
 .include "../../lang/python/application.mk"
-
 .include "../../mk/bsd.pkg.mk"
