--- a/devel/boost-libs/Makefile
+++ b/devel/boost-libs/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.111 2024/12/29 14:53:13 adam Exp $
+# $NetBSD: Makefile,v 1.112 2025/01/08 12:24:42 riastradh Exp $
 
 BOOST_PACKAGE=		libs
 BOOST_COMMENT=		(binary libraries)
@@ -67,6 +67,14 @@ CONFIGURE_ENV+=	ZLIB_LIBRARY_PATH=${BUILDLINK_PREFIX.zlib}/lib
 do-build: bjam-build
 
 do-install: boost-install-libs boost-install-cmake
+
+PRINT_PLIST_AWK+=	/boost_context/ { $$0 = "$${PLIST.context}"$$0 }
+PRINT_PLIST_AWK+=	/boost_coroutine/ { $$0 = "$${PLIST.context}"$$0 }
+PRINT_PLIST_AWK+=	/boost_fiber/ { $$0 = "$${PLIST.fiber}"$$0 }
+PRINT_PLIST_AWK+=	/boost_log/ { $$0 = "$${PLIST.log}"$$0 }
+PRINT_PLIST_AWK+=	/boost_math_c99l/ { $$0 = "$${PLIST.longdbl}"$$0 }
+PRINT_PLIST_AWK+=	/boost_math_tr1l/ { $$0 = "$${PLIST.longdbl}"$$0 }
+PRINT_PLIST_AWK+=	/boost_stacktrace_from_exception/ { $$0 = "$${PLIST.stacktrace_from_exception}"$$0 }
 
 .include "../../archivers/bzip2/buildlink3.mk"
 .include "../../archivers/xz/buildlink3.mk"
